<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PARKansas</string>
    <string name="did_you_know">Did You Know?...</string>
    <string name="home_text">Exit</string>

    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="action_about_developers">Development Team</string>
    <string name="title_activity_development_team">Development Team</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="quit_application">Exit</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pre_game_day">Pre-GameDay Car Moving</string>
    <string name="free_parking">Free Parking</string>
    <string name="wake_up_call">Wake Up Call</string>
    <string name="time_expiration">Set Time Expiration</string>
    <string name="harmon_notification">Harmon Notification</string>
    <string name="bus_stop">Bus Stop</string>
    <string name="other">Other</string>


    <string name="student_text">Student</string>
    <string name="faculty_text">Faculty</string>
    <string name="visitor_text">Visitor</string>
    <string name="gameday_visitor_text">Gameday Visitor</string>

    <string name="resident_reserved_text">Resident Reserved (Red)</string>
    <string name="reserved_blue_text">Reserved (Blue)</string>
    <string name="reserved_green_text">Student (Green)</string>
    <string name="reserved_faculty_text">Faculty/Staff (Yellow)</string>
    <string name="handicap_parking_text">ADA Parking</string>
    <string name="harmon_pass_text">Harmon Pass</string>
    <string name="remote_pass_text">Remote (Orange)</string>

    <string name="alert_text">Alerts</string>
    <string name="add_alert_text">New Alert</string>
    <string name="set_alert_name">Set Alert Name</string>
    <string name="set_alert_type">Select Alert Type</string>
    <string name="set_alert_date">Set Alert Day (Optional)</string>
    <string name="set_time">Set Alert Time</string>

    <string name="suspend_text">Suspend</string>
    <string name="dismiss_text">Dismiss</string>
    <string name="continue_text">Continue</string>
    <string name="save_text">Save and Continue</string>

    <string name="default_text">e.g. My Alert</string>
    <string name="wake_up_call_msg">By selecting Wake Up Call, you are enabling PARKansas to access
    your phone\'s Alarm Clock. PARKansas will not keep track of this alert as it will be stored on your
    phone\'s current alarm system. We recommend you set an alarm before 7:00 AM (Ticketing Time).</string>
    <string name="enable_disable_wake_up_call_msg">Don\'t show me this message again.</string>

    <string name="time_expiration_pre_msg">Set a time you would like to leave.</string>
    <string name="time_expiration_msg">Your paid parking will expire in 10 minutes</string>
    <string name="time_expiration_alert">What do you want to leave?</string>

    <string name="game_day_msg_football">Your car will be towed at 11:59 PM</string>
    <string name="game_day_alert_football">Your car will be towed at 11:59 PM</string>

    <string name="game_day_msg_m_basketball">Your car will be towed at </string>
    <string name="game_day_alert_m_basketball">Your car will be towed at </string>

    <!--Development Team-->
    <string name="cody_description">Cody Campbell: UI design and Database.</string>
    <string name="tony_description">Tony Hang: GPS integration.</string>
    <string name="dakota_description">Dakota Hawkins: Map design and Search.</string>
    <string name="kai_description">Kai Tribble: UI and Alerts.</string>

    <!--Help-->
    <string name="contact_title">Contact Us</string>
    <string name="contact_description">If you would like to contact us regarding question,
        comment or concern, click on text.</string>
    <string name="navigation_title">Navigation Guide</string>
    <string name="navigation_description"></string>
    <string name="alertsDescription">Alerts Activity: Allow the user to set different types of alerts.</string>

    <string name="game_day_msg_w_basketball">Your car will be towed at </string>
    <string name="game_day_alert_w_basketball">Your car will be towed at </string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_alert_info">AlertInfoActivity</string>
    <string name="title_activity_developer_info">Developers</string>

    <string name="pre_game_day_desc_no_game">No upcoming sports events on campus</string>
    <string name="free_parking_desc">Free Parking available prior to 7 AM every morning during the
        week and all day during the weekend. Note: This does not apply to the Harmon Garage,
        Resident Reserved, and wherever else noted otherwise.</string>
    <string name="set_time_expir_desc">Only use these alerts if parked at the Union Garage, short-term,
        or long-term parking meters</string>
    <string name="harmon_time_set_desc">The cost for hourly parking is $1.00 for 39 minutes or $16.00 per day.
        Vehicles leaving the facility within 20 minutes of entering will not have to pay for parking. A driver
        who exits more than 20 minutes from the entry time will pay the full rate for parking. </string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name ="fact_inquiries">If you notice something wrong with PARKansas and would like to
        report it, you can email the development team at team.m.parkansas@gmail.com</string>
    <string name="fact_lot74">Lots 74, 74 A, 74 B, 74 C, and 74 E are located across the street
        from the track parking lot. On average, there are 369 open spots available in all these lots
        combined.</string>
    <string name="fact_averageVacancies">At any given point in time, there are over 1,200 parking spots
        available.</string>
    <string name="fact_lateFreeLots">Lots 4, 5, 7, 8 and 61 require a permit between 7 AM and 8 PM
        Monday through Thursday and 7 AM to 5 PM on Friday.</string>
    <string name="fact_nextSemester">The Parking and Transit department is undergoing a major change
        with all lots. These changes include the paving of lot 40 C and the changing of most times of
        lots on campus.</string>
    <string name="fact_HarmonGarage">Harmon is open to the public at all times and requires payment
        between 7 AM and 1 AM Monday through Thursday; and Fridays from 7 AM to 6:15 PM.</string>
</resources>
