<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.uark.csce.parkansas.parkansas.HelpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contact_title"
        android:id="@+id/contactTitle"
        android:padding="15dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/contact_description"
        android:id="@+id/contactDescription"
        android:padding="15dp"
        android:layout_below="@+id/contactTitle"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/navigation_title"
        android:id="@+id/navigationTitle"
        android:padding="15dp"
        android:layout_below="@+id/contactDescription"
        android:layout_centerHorizontal="true" />

    <GridView
            android:numColumns="auto_fit"
            android:gravity="center"
            android:columnWidth="100dp"
            android:stretchMode="columnWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/navigationTitle"
            android:id="@+id/grid" />

</RelativeLayout>

