<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/setAlertNameTitle"
        android:padding="15dp"
        android:text="@string/set_alert_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/alertEditText"
        android:padding="15dp"
        android:textIsSelectable="false"
        android:hint="@string/default_text"
        android:maxLength="25"
        android:layout_below="@+id/setAlertNameTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines="1"
        android:singleLine="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/daySpinner"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        android:entries="@array/days_of_week"
        android:layout_below="@+id/alertEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_time"
        android:id="@+id/mSetTimeButton"
        android:padding="20dp"
        android:layout_below="@+id/daySpinner"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        android:id="@+id/saveAndContinue"
        android:padding="20dp"
        android:background="@color/DarkGreen"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/alertType_text"
        android:layout_below="@+id/mSetTimeButton"
        android:layout_centerHorizontal="true"
        android:padding="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/alertType_desc"
        android:layout_below="@+id/alertType_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/saveAndContinue"
        android:padding="15dp" />

</RelativeLayout>
